--- a/Assets/css/TriviaGameStyle.css
+++ b/Assets/css/TriviaGameStyle.css
@@ -6,8 +6,6 @@ body{
    background-size: cover;
    height: 100vh;
    font-weight: 600;
-   
-   
    }
    
 
@@ -19,5 +17,22 @@ body{
        border-width: thick;
        border-style: solid;
        font-size: xx-large;
+   }
+
+   .col-sm-11{
+    background-image: url(../images/Dad&HabibRugRepairPic.jpg);
+    opacity:1;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    text-align: center;
+    color: rgb(205, 195, 50);
+    font-family: 'Times New Roman', Times, serif;
+    font-size: large;
+    font-weight: 900;
+    border: springgreen 10px;
+    border-style: solid;
+    
+    }  
    
    
